--- a/style/footer.css
+++ b/style/footer.css
@@ -10,6 +10,9 @@
 }
 
 .footer__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
 }
 
@@ -23,6 +26,9 @@
 }
 
 .footer__instagram {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     padding: 20px;
     margin: 0;
@@ -36,6 +42,7 @@
 
 .insta_photos {
     margin-bottom: 40px;
+    max-width: 280px;
 }
 
 .insta_photos img{
