--- a/style/footer.css
+++ b/style/footer.css
@@ -23,6 +23,7 @@
 
 .footer__info p {
     margin: 0 0;
+    max-width: 280px;
 }
 
 .footer__instagram {
@@ -48,4 +49,15 @@
 .insta_photos img{
     width: 75px;
     height: 75px;
+}
+
+@media (min-width: 768px) {
+    .footer {
+        display: flex;
+        justify-content: center;   
+    }
+
+    .insta_photos {
+        min-height: 150;
+    }
 }
