--- a/style/nav.css
+++ b/style/nav.css
@@ -15,7 +15,7 @@ body {
     background-color: #000;
 }
 
-.nav h1 {
+.nav .logo {
     position: absolute;
     left: 1%;
     opacity: 1;
@@ -51,13 +51,22 @@ body {
         display: none;
     }
 
-    .nav h1 {
+    .nav .logo {
         display: none;
     }
 }
 
 @media (max-width: 600px) {
-    .nav h1 {
+    .nav .logo {
         margin-left: 0;
+    }
+}
+
+@media (min-width: 500px) {
+    .nav {
+        z-index: 99;
+        position: fixed;
+        top: 0;
+        width: 100%;
     }
 }
