--- a/style/screen_welcome.css
+++ b/style/screen_welcome.css
@@ -1,6 +1,7 @@
 .welcome h2 {
     text-align: left;
     margin: 40px 20px 20px 20px;
+    max-width: 280px;
     min-width: 280px;
 }
 
@@ -13,6 +14,7 @@
     .welcome {
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     .welcome h2 {
