--- a/style/nav.css
+++ b/style/nav.css
@@ -10,9 +10,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    color: white;
-    border: solid 1px black;
+    border-bottom: solid 1px #272727;
     background-color: #000;
+    height: 52px;
 }
 
 .nav .logo {
@@ -20,9 +20,10 @@ body {
     left: 1%;
     opacity: 1;
     margin-left: 5%;
+    color: white;
 }
 
-.nav ul {
+.nav .menu {
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -31,23 +32,32 @@ body {
     padding: 0 0;
 }
 
-.nav ul li {
+.nav .menu a {
     list-style-type: none;
     cursor: pointer;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
 }
 
-.nav ul li:hover {
+.menu-color {
+    color: white;
+    text-decoration: none;
+}
+
+.actived {
+    color: aqua;
+}
+
+.nav .menu a:hover {
     color:aqua;
 }
 
-.nav ul li:active {
+.nav .menu a:active {
     color:aqua;
 }
 
 @media (max-width: 499px) {
-    .nav ul li:nth-child(1) {
+    .nav .menu a:nth-child(1) {
         display: none;
     }
 
