--- a/style/screen_welcome.css
+++ b/style/screen_welcome.css
@@ -10,6 +10,12 @@
     margin: 20px 20px 40px 20px;
 }
 
+.booked {
+    width: 200px;
+    height: 50px;
+    background-color: aqua;
+}
+
 @media (min-width: 768px) {
     .welcome {
         display: flex;
