--- a/style/screen_services.css
+++ b/style/screen_services.css
@@ -42,6 +42,11 @@
     top: 0;
     left: 0;   
 }
+
+@media(max-width: 768px) {
+
+}
+
 @media(max-width: 768px) {
     .resp-tab thead {
         display: none;
@@ -60,6 +65,16 @@
     }
     .resp-tab td span {
         display: block;
+    }
+}
+/* Мои правки над текстом мобильной версии */
+@media(max-width: 480px) {
+    .resp-tab tbody tr td span {
+        display: none;
+    }
+
+    .resp-tab tbody tr td {
+        padding: 10px;
     }
 }
 
