--- a/style/nav.css
+++ b/style/nav.css
@@ -24,6 +24,11 @@ body {
     color: white;
 }
 
+.logo img {
+    width: 50px;
+    height: 50px;
+}
+
 .nav .menu {
     display: flex;
     justify-content: space-around;
