--- a/style/btn_to_top.css
+++ b/style/btn_to_top.css
@@ -1,6 +1,9 @@
 .btn-to-top {
   position: fixed;
   right: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   bottom: 50px;
   border-radius: 35%;
   width: 50px;
