--- a/style/screen_welcome.css
+++ b/style/screen_welcome.css
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Raleway:ital,wght@1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Great+Vibes&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abel&family=Cormorant+Garamond:wght@500&family=Great+Vibes&family=Manrope&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Love+Light&display=swap');
+
+/* the last */
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
 .welcome {
   display: flex;
   justify-content: center;
@@ -15,22 +20,25 @@
   height: auto;
 }
 .welcome__font-block h2 {
-  font-size: 28px;
-  font-family: "Cormorant Garamond", serif;
-  background: linear-gradient(127.56deg, #FFFFFF -106.78%, #000000 86.1%);
+  margin: 80px 0 40px 0;
+  background: linear-gradient(127.56deg, #FFFFFF -6.78%, #000000 150.1%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin: 40px 0 40px 0;
+  font-size: 28px;
+  font-family: 'Audiowide', cursive;
 }
+
 .welcome__font-block h2 span {
   font-size: 75px;
 }
+
 .welcome__font-block p {
   max-width: 300px;
   margin-left: 100px;
   font-family: "Abel", sans-serif;
   margin: 0;
   margin-bottom: 40px;
+  color: white;
 }
 
 .welcome__picture-block {
