only mobile version

--- a/style/itc-slider.css
+++ b/style/itc-slider.css
@@ -42,8 +42,7 @@
 .slider__item img {
   width: 100%;
   height: 360px;
-  /* object-fit: none; */
-  object-fit: contain;
+  object-fit: cover;
   transform: scale(1);
 }
 
@@ -136,8 +135,13 @@
   background-color: rgb(255 255 255 / 90%);
 }
 
-@media (min-width: 500px) {
-  .slider {
+@media (max-width: 320px) {
+  /* .slider {
     margin-top: 52px;
+  } */
+  .slider__item img {
+    object-fit: cover;
+    width: 320px;
+    height: 200px;
   }
 }
