--- a/style/footer.css
+++ b/style/footer.css
@@ -1,64 +1,31 @@
-* {
-    box-sizing: border-box;
-}
-
-.footer {
-    width: 100%;
-    background-color: black;
-    color: white;
-    
-}
-
 .footer__info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  color: white;
 }
-
-.footer__info h3 {
-    text-align: center;
-    margin: 0 0 20px 0;
-}
-
 .footer__info p {
-    margin: 0 0;
-    max-width: 280px;
+  font-family: "Abel", sans-serif;
+}
+.footer__info .footer__info-logos img {
+  width: 50px;
+  height: 50px;
 }
 
 .footer__instagram {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin: 0;
 }
-
-.footer__instagram h3 {
-    text-align: center;
-    padding: 0 0 20px 0;
-    margin: 0 0;
+.footer__instagram .insta_photos {
+  margin-bottom: 40px;
+  max-width: 280px;
 }
-
-.insta_photos {
-    margin-bottom: 40px;
-    max-width: 280px;
-}
-
-.insta_photos img{
-    width: 75px;
-    height: 75px;
-    cursor: pointer;
-}
-
-@media (min-width: 768px) {
-    .footer {
-        display: flex;
-        justify-content: center;   
-    }
-
-    .insta_photos {
-        min-height: 150;
-    }
-}
+.footer__instagram .insta_photos img {
+  width: 75px;
+  height: 75px;
+  cursor: pointer;
+}/*# sourceMappingURL=footer.css.map */
