--- a/style/screen_services.css
+++ b/style/screen_services.css
@@ -24,10 +24,23 @@
   background: white;
   transition: 0.5s ease;
   margin: 0 0 20px 0;
+  opacity: 0.7;
+  overflow: hidden;
+}
+.card img {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
 }
 .card.active {
   height: 300px;
-  background: red;
+  background: black;
+  border: solid 1px white;
+  color: white;
+  opacity: 1;
+}
+.card.active img {
+  display: block;
 }
 .card p {
   text-align: center;
