--- a/style/screen_services.scss
+++ b/style/screen_services.scss
@@ -24,10 +24,25 @@
     background: white;
     transition: 0.5s ease;
     margin: 0 0 20px 0;
+    opacity: 0.7;
+    overflow: hidden;
+
+    img {
+        width: 300px;
+        height: 200px;
+        overflow: hidden;
+    }
 
     &.active {
         height: 300px;
-        background: red;
+        background: black;
+        border: solid 1px white;
+        color: white;
+        opacity: 1;
+
+        img {
+            display:block;
+        }
     }
 
     p {
