--- a/style/screen_welcome.scss
+++ b/style/screen_welcome.scss
@@ -7,7 +7,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 body {
-    background-color: black;
+    // background-color: black;
+    background-image: url("../images/bg/bg_wood5.jpg");
+    background-position: center;
+    // background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+    background-size: cover;
 }
 
 .welcome {
