--- a/style/nav.scss
+++ b/style/nav.scss
@@ -30,6 +30,7 @@ body {
             cursor: pointer;
             transition-duration: 0.3s;
             transition-timing-function: ease-in-out;
+            font-family: "Abel", sans-serif;
 
             &:hover {
                 color: gray;
