--- a/style/nav.css
+++ b/style/nav.css
@@ -28,6 +28,7 @@ body {
   cursor: pointer;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
+  font-family: "Abel", sans-serif;
 }
 .nav .menu a:hover {
   color: gray;
