--- a/style/screen_services.css
+++ b/style/screen_services.css
@@ -19,6 +19,9 @@
 }
 
 .card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   width: 300px;
   height: 45px;
   background: white;
@@ -49,4 +52,15 @@
   min-width: 36px;
   font-weight: 500;
   font-family: "Abel", sans-serif;
+}
+
+@media (min-width: 768px) {
+  .cards {
+    display: flex;
+    align-items: center;
+    width: 500px;
+  }
+  .cards .card {
+    width: 100%;
+  }
 }/*# sourceMappingURL=screen_services.css.map */
