--- a/style/screen_services.scss
+++ b/style/screen_services.scss
@@ -19,6 +19,9 @@
 }
 
 .card {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     width: 300px;
     height: 45px;
     background: white;
@@ -52,5 +55,17 @@
         min-width: 36px;
         font-weight: 500;
         font-family: 'Abel', sans-serif;
+    }
+}
+
+@media (min-width: 768px) {
+    .cards {
+        display: flex;
+        align-items: center;
+        width: 500px;
+
+        .card {
+            width: 100%;
+        }
     }
 }
