--- a/style/footer.css
+++ b/style/footer.css
@@ -11,6 +11,9 @@
   width: 50px;
   height: 50px;
 }
+.footer__info .footer__info-logos a {
+  text-decoration: none;
+}
 
 .footer__instagram {
   display: flex;
@@ -28,4 +31,7 @@
   width: 75px;
   height: 75px;
   cursor: pointer;
+}
+.footer__instagram .insta_photos a {
+  text-decoration: none;
 }/*# sourceMappingURL=footer.css.map */
