--- a/style/footer.scss
+++ b/style/footer.scss
@@ -12,6 +12,10 @@
         width: 50px;
         height: 50px;
     }
+
+    .footer__info-logos a {
+        text-decoration: none;
+    }
 }
 
 .footer__instagram {
@@ -30,6 +34,10 @@
             width: 75px;
             height: 75px;
             cursor: pointer;
+        }
+
+        a {
+            text-decoration: none;
         }
     }
 }
